--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 
 
-        <div class="box">
+        <div class="box" >
             
-            <form>
+            <form style=" align-items: center;">
+                
                 <h3 style="color: white;"> Formulário: </h3>
                 <label class="fav"for="pnome">nome:</label><br>
                 <input class='form' type="text" id="pnome" name="pnome"><br>
