--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>Exemplo de formulario</title>
+    <title>Exemplo de formulário</title>
     <link rel=' stylesheet' href='estilo.css' type='text/css' media='all'>
 </head>
 
@@ -14,7 +14,7 @@
             
             <form style=" align-items: center;">
                 
-                <h3 style="color: white;"> Formulário: </h3>
+                <h3 style="color: white;"> Formulário: </h3> 
                 <label class="fav"for="pnome">nome:</label><br>
                 <input class='form' type="text" id="pnome" name="pnome"><br>
                 <label class="fav" for="snome">sobrenome:</label><br>
