inseri mais uma tela

--- a/form.html
+++ b/form.html
@@ -12,15 +12,15 @@
 
         <div class="box" >
             
-            <form style=" align-items: center;">
+            <form style=" justify-content: center;">
                 
                 <h3 style="color: white;"> Formulário: </h3> 
                 <label class="fav"for="pnome">nome:</label><br>
                 <input class='form' type="text" id="pnome" name="pnome"><br>
-                <label class="fav" for="snome">sobrenome:</label><br>
-                <input class='form' type="text" id="snome" name="snome"><br>
                 <label class="fav"for="email">email:</label><br>
-                <input class='form' type="text" id="email" name="email"></br>br>
+                <input class='form' type="text" id="email" name="email"></br><br>
+                <label class="fav"for="email">comida favorita</label><br>
+                <input class='form' type="text" id="com" name="com"></br><br>
 
                 <p style="color: white;"> Sua linguagem favorita </p>
                 <input class="fav" type="radio" id="html" name="fav_lingua" value="HTML">
