--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
                 <label class="fav"for="pnome">nome:</label><br>
                 <input class='form' type="text" id="pnome" name="pnome"><br>
                 <label class="fav"for="email">email:</label><br>
-                <input class='form' type="text" id="email" name="email"></br><br>
+                <input class='form' type="text" id="email" name="email"></br>
                 <label class="fav"for="email">comida favorita</label><br>
                 <input class='form' type="text" id="com" name="com"></br><br>
 
